grab and release beginning

--- a/client/nav.jade
+++ b/client/nav.jade
@@ -150,7 +150,7 @@ template(name='nav')
 
 
 template(name='footer')
-    .ui.fluid.basic.attached.secondary.segment.footer
+    .ui.fluid.basic.attached.tertiary.segment.footer
         .ui.stackable.grid
             .four.wide.column
                 +latest_activity
